syntax = "proto3";

package protocom.contracts;

option csharp_namespace = "ProtoCom.Contracts";

import "./Messages.proto";
import "google/protobuf/empty.proto";

service CartGrain {
    rpc AddItem(AddItemRequest) returns (CartResponse);
    rpc RemoveItem(RemoveItemRequest) returns (CartResponse);
    rpc GetCart(GetCartRequest) returns (CartResponse);
    rpc ClearCart(ClearCartRequest) returns (CartResponse);
}
